[gd_scene load_steps=5 format=3 uid="uid://bikmbnxgn4uqm"]

[ext_resource type="Script" uid="uid://wcb1l8b0dhup" path="res://scenes/main_screens/location_activities.gd" id="1_3xprj"]
[ext_resource type="Texture2D" uid="uid://c8eul4mfllv73" path="res://assets/character_faces/face0.png" id="1_pjl2h"]
[ext_resource type="PackedScene" uid="uid://caj4vm4x2p0am" path="res://components/ui/cheat_panel.tscn" id="3_22u0r"]
[ext_resource type="Texture2D" uid="uid://c45svqin8nasu" path="res://assets/professions/herbalist.png" id="4_eg6yx"]

[node name="LocationActivities" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3xprj")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -176.0
offset_right = 177.5
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[color=\"green\"] Location screen[/color]"
fit_content = true
scroll_active = false

[node name="AvatarPlaceHolder" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 67.0
offset_right = 299.0
offset_bottom = 323.0

[node name="TextureRect" type="TextureRect" parent="AvatarPlaceHolder"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_pjl2h")

[node name="MainParamsHolder" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 70.0
offset_right = 764.0
offset_bottom = 187.0

[node name="RichTextLabel" type="RichTextLabel" parent="MainParamsHolder"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "         ID:
UserID:
 Name: "

[node name="MainAttrsHolder" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 207.0
offset_right = 764.0
offset_bottom = 318.0
theme_override_constants/separation = 10

[node name="HPProgressBar" type="ProgressBar" parent="MainAttrsHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9490196, 0.02745098, 0.023529412, 1)
step = 1.0
value = 25.0

[node name="MPProgressBar" type="ProgressBar" parent="MainAttrsHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_colors/font_outline_color = Color(0.12941177, 0, 0.15294118, 1)
step = 1.0
value = 25.0

[node name="ShieldProgressBar" type="ProgressBar" parent="MainAttrsHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.12941177, 0, 0.15294118, 1)
step = 1.0
value = 25.0

[node name="MainAttrNamesHolder" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 201.0
offset_right = 360.0
offset_bottom = 315.0

[node name="HPLabel" type="Label" parent="MainAttrNamesHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "HP"

[node name="MPLabel" type="Label" parent="MainAttrNamesHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 24
text = "MP"

[node name="ShieldLabel" type="Label" parent="MainAttrNamesHolder"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Shield
"

[node name="CheatPanel" parent="." instance=ExtResource("3_22u0r")]
layout_mode = 1

[node name="ActivitiesPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 867.0
offset_top = 1254.0
offset_right = 1601.0
offset_bottom = 1566.0

[node name="Label" type="Label" parent="ActivitiesPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 32
text = "Activities in location:"

[node name="Label2" type="Label" parent="ActivitiesPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 69.0
offset_right = 224.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 32
text = "Herbalism"

[node name="StartButton" type="Button" parent="ActivitiesPanel"]
layout_mode = 0
offset_left = 227.0
offset_top = 66.0
offset_right = 365.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="EndButton" type="Button" parent="ActivitiesPanel"]
layout_mode = 0
offset_left = 377.0
offset_top = 66.0
offset_right = 515.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 32
text = "End"

[node name="Panel" type="Panel" parent="ActivitiesPanel"]
layout_mode = 0
offset_left = 30.0
offset_top = 130.0
offset_right = 515.0
offset_bottom = 238.0

[node name="ActivityEdit" type="RichTextLabel" parent="ActivitiesPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Dummy
"

[node name="TextureRect" type="TextureRect" parent="ActivitiesPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.027
anchor_bottom = 0.064
offset_left = 531.0
offset_top = 64.0
offset_right = 692.182
offset_bottom = 213.032
texture = ExtResource("4_eg6yx")

[connection signal="button_down" from="ActivitiesPanel/StartButton" to="." method="_on_start_button_button_down"]
